src/styles/globals.css
/* @import './reset.css'; */

@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
    --primary: 18, 100%, 59%; /* #ff6c2f */
    --secondary: 102.86, 12.73%, 67.65%; /* #f8e1c6 */
    --accent: 32.4, 78.13%, 87.45%; /* #a8b7a2 */

    --white: 0, 0%, 94.12%; /* #f0f0f0 */
    --muted-white: 0, 0%, 93.73%; /* #efefef */
    --bright-white: 0, 0%, 100%; /* #ffffff */
    --black: 0, 0%, 11%; /* #1c1c1c */
    --muted-black: 0, 0%, 20%; /* #333333 */

    --foreground: 0, 6%, 90%; /*#e6e3e3  */

    --ghost-bg: transparent;
    --ghost-text: black;

    --font-symbola: 'SymbolaRegular';

    --font-logo: var(--font-symbola);

    --border-radius: 8px;
    --max-width: 1400px;
}

/* 
@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
} */

html,
body {
    height: 100%;
    display: flex;
    flex-direction: column;
}

body {
    min-height: 100vh;
    color: hsl(var(--black));
    font-family: 'Rubik', sans-serif;
}

h1,
h2,
h3,
h4 {
    font-family: 'Merriweather', serif;
}

main {
    margin-top: 4rem;
    flex: 1;
    font-family: 'Rubik', sans-serif;
}

.logo {
    font-family: var(--font-logo);
}

.button-ghost {
    background-color: transparent !important;
    color: var(--ghost-bg) !important;
    border: 2px solid var(--ghost-bg) !important;
    transition: all 0.2s ease-in-out;
}

.button-ghost:hover {
    background-color: var(--ghost-bg) !important;
    color: var(--ghost-text) !important;
    border-color: var(--ghost-bg) !important;
}

.faqEmbed {
    color: blue;
    text-decoration: underline;
}

@layer base {
    * {
        @apply border-border outline-ring/50 text-base;
    }
    body {
        @apply bg-primary-foreground text-black;
    }

    h1 {
        @apply text-4xl font-bold text-black-muted;
    }

    h2 {
        @apply text-2xl font-bold text-black-muted;
    }

    h3 {
        @apply text-xl font-bold text-black-muted;
    }

    h4 {
        @apply text-base font-bold text-black-muted;
    }

    .nav-link {
        @apply text-[16px] text-primary font-bold transition-colors;
    }
    .nav-link:hover {
        @apply hovered-nav-link; /* => color: hsl(var(--secondary)); */
    }
    .nav-link.active {
        /* text color and border using your secondary color */
        @apply selected-nav-link border-b-2 border-secondary;
    }
}

@layer utilities {
    .text-balance {
        text-wrap: balance;
    }

    .selected-nav-link {
        color: hsl(var(--primary));
    }
    .hovered-nav-link {
        color: hsl(var(--primary));
    }
}

@layer components {
    .nav-link {
        @apply relative text-[16px] text-muted transition-colors;
    }

    .nav-link::after {
        content: '';
        position: absolute;
        left: 50%;
        bottom: -2px;
        width: 0;
        height: 2px;
        background-color: hsl(var(--secondary));
        transition:
            width 0.3s ease,
            left 0.3s ease;
    }

    .nav-link:hover::after,
    .nav-link.active::after {
        width: 100%;
        left: 0;
    }

    .nav-link.active {
        @apply font-bold text-secondary;
    }
}

@layer base {
    * {
        @apply border-border outline-ring/50;
    }
    body {
        @apply bg-background text-foreground;
    }
}

